crates/carta/tests/snapshots/golden_e2e__docbook__native__tables-html.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Table
    ( "grid" , [] , [] )
    (Caption
       Nothing
       [ Plain
           [ Str "A" , Space , Str "titled" , Space , Str "grid" ]
       ])
    [ ( AlignRight , ColWidthDefault )
    , ( AlignCenter , ColWidthDefault )
    ]
    (TableHead
       ( "" , [] , [] )
       [ Row
           ( "" , [] , [] )
           [ Cell
               ( "" , [] , [] )
               AlignDefault
               (RowSpan 1)
               (ColSpan 1)
               [ Plain [ Str "Head" , Space , Str "one" ] ]
           , Cell
               ( "" , [] , [] )
               AlignDefault
               (RowSpan 1)
               (ColSpan 1)
               [ Plain [ Str "Head" , Space , Str "two" ] ]
           ]
       ])
    [ TableBody
        ( "" , [] , [] )
        (RowHeadColumns 0)
        []
        [ Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "a" ] ]
            , Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "b" ] ]
            ]
        , Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [] )
                AlignLeft
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "c" ] ]
            , Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Para [ Str "d" ] ]
            ]
        ]
    ]
    (TableFoot ( "" , [] , [] ) [])
, Table
    ( "" , [] , [] )
    (Caption
       Nothing
       [ Plain
           [ Str "A"
           , Space
           , Str "caption"
           , Space
           , Str "instead"
           , Space
           , Str "of"
           , Space
           , Str "a"
           , Space
           , Str "title"
           ]
       ])
    [ ( AlignDefault , ColWidthDefault )
    , ( AlignDefault , ColWidthDefault )
    , ( AlignDefault , ColWidthDefault )
    ]
    (TableHead ( "" , [] , [] ) [])
    [ TableBody
        ( "" , [] , [] )
        (RowHeadColumns 0)
        []
        [ Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain
                    [ Str "Spans"
                    , Space
                    , Str "are"
                    , Space
                    , Str "not"
                    , Space
                    , Str "honored"
                    ]
                ]
            , Cell
                ( "" , [] , [] ) AlignDefault (RowSpan 1) (ColSpan 1) []
            , Cell
                ( "" , [] , [] ) AlignDefault (RowSpan 1) (ColSpan 1) []
            ]
        , Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "x" ] ]
            , Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "y" ] ]
            , Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "z" ] ]
            ]
        ]
    ]
    (TableFoot ( "" , [] , [] ) [])
]
